WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
189679
[Win] TestRunner::queueLoad() fails to generate correct url for some urls.
https://bugs.webkit.org/show_bug.cgi?id=189679
Summary
[Win] TestRunner::queueLoad() fails to generate correct url for some urls.
Basuke Suzuki
Reported
2018-09-17 14:21:26 PDT
In win/TestRunnerWin.cpp:327, it just generates a new url assuming passed url is relative url.
Attachments
PATCH
(1.91 KB, patch)
2018-09-19 11:35 PDT
,
Basuke Suzuki
no flags
Details
Formatted Diff
Diff
PATCH
(3.71 KB, patch)
2018-09-19 13:10 PDT
,
Basuke Suzuki
no flags
Details
Formatted Diff
Diff
PATCH
(3.87 KB, patch)
2018-09-20 10:47 PDT
,
Basuke Suzuki
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Basuke Suzuki
Comment 1
2018-09-19 11:35:41 PDT
Created
attachment 350136
[details]
PATCH Use UrlCombineW Win32 API to generate correct URL for relative URLs.
Basuke Suzuki
Comment 2
2018-09-19 13:10:56 PDT
Created
attachment 350144
[details]
PATCH
Fujii Hironori
Comment 3
2018-09-19 23:55:35 PDT
Comment on
attachment 350144
[details]
PATCH View in context:
https://bugs.webkit.org/attachment.cgi?id=350144&action=review
> Tools/DumpRenderTree/win/TestRunnerWin.cpp:346 > + while (true) {
You can use UrlCombine instead of UrlCombineA. You don't need this `while` loop because you can get minimum length of result. DWORD bufferSize = 0; auto result = UrlCombine(responseURL.data(), wURL.data(), nullptr, &bufferSize, 0); if (result == E_POINTER) { buffer.resize(bufferSize); auto result = UrlCombine(responseURL.data(), wURL.data(), buffer.data(), &bufferSize, 0); }
Basuke Suzuki
Comment 4
2018-09-20 10:47:35 PDT
Oh, that's nice. Thanks.
Basuke Suzuki
Comment 5
2018-09-20 10:47:57 PDT
Created
attachment 350232
[details]
PATCH
WebKit Commit Bot
Comment 6
2018-09-20 14:37:07 PDT
Comment on
attachment 350232
[details]
PATCH Clearing flags on attachment: 350232 Committed
r236285
: <
https://trac.webkit.org/changeset/236285
>
WebKit Commit Bot
Comment 7
2018-09-20 14:37:09 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 8
2018-09-20 14:38:39 PDT
<
rdar://problem/44656380
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug