[Win] TestRunner::queueLoad() fails to generate correct url for some urls. https://bugs.webkit.org/show_bug.cgi?id=189679

Reviewed by Fujii Hironori.

Tools:

Replace the implementation with correct API call.

* DumpRenderTree/win/TestRunnerWin.cpp:
(TestRunner::queueLoad): Call UrlCombineW.

LayoutTests:

* platform/wincairo/TestExpectations:


Canonical link: https://commits.webkit.org/204757@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@236285 268f45cc-cd09-0410-ab3c-d52691b4dbfc